--- a/pages/sucess.html
+++ b/pages/sucess.html
@@ -7,7 +7,14 @@
     <title>GattOmega</title>
 </head>
 <body>
-    <img src="../assests/images/1004765.png">
+    <!--imagem para mostar que a ação foi concluida-->
+    <img src="../assests/images/1004765.png" width="128" height="128">
+    <!--mensagem para o leitor conseguir entender o que aconteceu-->
+    <h1>Feedback enviado com sucesso!</h1>
+    <!--botão para voltar a página inicial-->
+    <form>
+        <input type="submit" value="Voltar ao Inicio" id="voltar">
+    </form>
     
 </body>
 </html>
