--- a/menu.html
+++ b/menu.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>menu</title>
+    <title>doce</title>
 </head>
+
 <body>
-    <article>
+
+    <section>
+
+    </section>
+    </article>
+
+    <article><!-- Um iten-->
+        <section>
+
+        </section>
+
+        <section>
+
+        </section>
+    </article>
+
+    <article><!-- Um iten-->
+        <section>
+
+        </section>
+
+        <section>
+
+        </section>
         
     </article>
+    </main>
+
 </body>
+
 </html>
