adição de sombra na imagem

--- a/pages/sucess.html
+++ b/pages/sucess.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!--imagem para mostar que a ação foi concluida-->
-    <img src="../assests/images/1004765.png" width="128" height="128">
+    <img src="../assests/images/Design sem nome.png" width="256" height="256">
     <!--mensagem para o leitor conseguir entender o que aconteceu-->
     <h1>Feedback enviado com sucesso!</h1>
     <!--botão para voltar a página inicial-->
