--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 <body>
 
     <section>
-
+<img src="assests/images/319490_original.webp" width="120px" height="120px">
     </section>
     </article>
 
@@ -31,7 +31,7 @@
         <section>
 
         </section>
-        
+
     </article>
     </main>
 
