fix:finalização sucess

--- a/pages/sucess.html
+++ b/pages/sucess.html
@@ -12,7 +12,7 @@
     <!--mensagem para o leitor conseguir entender o que aconteceu-->
     <h1>Feedback enviado com sucesso!</h1>
     <!--botão para voltar a página inicial-->
-    <form>
+    <form action="../menu.html">
         <input type="submit" value="Voltar ao Inicio" id="voltar">
     </form>
     
