--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
 <img src="assests/images/319490_original.webp" width="120px" height="120px">
     </section>
     </article>
-    
+    <img src="assests/images/doce.jpg" width="120px" height="120px">
     <article><!-- Um iten-->
         <section>
 
