--- a/pages/contato.html
+++ b/pages/contato.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../assests/css/contato.css">
     <title>Document</title>
 </head>
+
 <body>
     <form>
+        <article>
+            <h1 id="h1">Deixe um comentário</h1>
+        
+        <div class="caixataxt1">
         <label>Nome:</label>
-        <input type="" placeholder="Digite seu nome">
+        <input type="" placeholder="Digite seu nome" id="caixataxt1">
+        </div>
+        <div class="caixataxt1">
         <label>E-mail:</label>
-            <input type="" placeholder="Digite seu e-mail"> 
-            <label>Comentário:</label>
-            <input placeholder="Digite sua mensagem">
-            <input type="submit">
+        <input type="" placeholder="Digite seu e-mail"id="caixataxt1">
+        </div>
+        <div class="caixataxt1">
+        <label>Comentário:</label>
+        <input placeholder="Digite sua mensagem" id="mensag">
+        </div>
+        <div >
+        <input type="submit" id="enviar">
+        </div>
+        </article>
 
     </form>
-    
+
 </body>
+
 </html>
