--- a/menu.html
+++ b/menu.html
@@ -3,16 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
+    <link href="assests/css/menu.css" rel="stylesheet">
     <title>doce</title>
 </head>
 
 <body>
-
     <section>
-<img src="assests/images/319490_original.webp" width="120px" height="120px">
+        <img src="assests/images/319490_original.webp" width="9%" height="9%">
     </section>
     </article>
-    <img src="assests/images/doce.jpg" width="120px" height="120px">
     <article><!-- Um iten-->
         <section>
 
@@ -34,7 +33,6 @@
 
     </article>
     </main>
-
 </body>
 
 </html>
