centralização do h1 e adição da border double

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -13,15 +13,15 @@
             <h1 id="h1">Deixe um comentário</h1>
         
         <div class="caixataxt1">
-        <label>Nome:</label>
-        <input type="" placeholder="Digite seu nome" id="caixataxt1">
+        <label id="label">Nome:</label>
+        <input type="" placeholder="Digite seu nome" id="caixatext1">
         </div>
         <div class="caixataxt1">
-        <label>E-mail:</label>
-        <input type="" placeholder="Digite seu e-mail"id="caixataxt1">
+        <label id="label">E-mail:</label>
+        <input type="" placeholder="Digite seu e-mail"id="caixatext1">
         </div>
         <div class="caixataxt1">
-        <label>Comentário:</label>
+        <label id="label">Comentário:</label>
         <input placeholder="Digite sua mensagem" id="mensag">
         </div>
         <div >
