--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 
 <body>
     <section>
-        <img src="assests/images/319490_original.webp" width="9%" height="9%">
+        <img src="assests/images/319490_original.webp" width="9%" height="9%" id="img">
     </section>
     </article>
     <article><!-- Um iten-->
