--- a/menu.html
+++ b/menu.html
@@ -8,30 +8,31 @@
 </head>
 
 <body>
-    <section>
-        <img src="assests/images/319490_original.webp" width="9%" height="9%" id="img">
-    </section>
-    </article>
-    <article><!-- Um iten-->
+    <main>
         <section>
-
+<h1><img src="assests/images/doce.jpg" width="9%" height="9%" id="img"></h1>
         </section>
+        </article>
+        <article><!-- Um iten-->
+            <section>
 
-        <section>
+            </section>
+<h1><img src="assests/images/319490_original.webp" width="9%" height="9%" id="img2"></h1>
+            <section>
 
-        </section>
-    </article>
+            </section>
+        </article>
 
-    <article><!-- Um iten-->
-        <section>
+        <article><!-- Um iten-->
+            <section>
 
-        </section>
+            </section>
 
-        <section>
+            <section>
 
-        </section>
+            </section>
 
-    </article>
+        </article>
     </main>
 </body>
 
