adicionando mais explicações

--- a/pages/sucess.html
+++ b/pages/sucess.html
@@ -8,6 +8,7 @@
     <title>GattOmega</title>
 </head>
 <body>
+    <!--linkando o header-->
     <iframe href="../layouts/header.html" width="100%" scrolling="no" frameborder="no"></iframe>
     <!--imagem para mostar que a ação foi concluida-->
     <img src="../assests/images/Design sem nome.png" width="256" height="256">
@@ -17,6 +18,7 @@
     <form action="../menu.html">
         <input type="submit" value="Voltar ao Inicio" id="voltar">
     </form>
+    <!--linkando footer-->
     <iframe src="../layouts/footer.html" width="100%" frameborder="no"></iframe>
 </body>
 </html>
