nome e estilização adicionada a menu.html

--- a/menu.html
+++ b/menu.html
@@ -16,6 +16,7 @@
                 <img src="assests/images/gato1.jfif" width="64px" height="64px" class="imagens123456">
             </section>
             <section id="se123">
+                <h1>Cheshire</h1>
                 <img src="assests/images/gato2.jpg" width="64px" height="64px" class="imagens123456">
             </section>
             <section id="se123">
