branch do fábio

--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link href="assests/css/menu.css" rel="stylesheet" type="text/css">
     <title>Patiserie di Paris</title>
 </head>
 
@@ -11,10 +12,11 @@
 
     </header>
     <article id="art1"><!-- Aqui ficará a promoção principal (petit gateau) -->
-        <section>
-            <img src="assests/images/petitgateaupp.jpg" height="128" width="64">
+        <section id="promo1">
+            <img src="assests/images/petitgateaupp.jpg" height="128" width="82">
         </section>
-        <section>
+        <hr>
+        <section id="promo01">
             <p> Nossa promoção principal - Em celebração aos 50 anos de idade da nossa patisserie, nós aderimos
                 como nossa promoção principal, o nosso famoso petitgateau da gateauomega! Feito com ingredientes
                 especiais, selecionados por produtores locais no sul da França e na Suiça, o nosso petitgateau, tem
@@ -27,50 +29,34 @@
         </section>
     </article>
     <main><!-- Dentro dessa main com um monte de articles, serão dispostos os itens do cardapio -->
-        <article><!-- Um iten-->
+        <article id="a01"><!-- Um iten-->
             <section>
-
+                <img src="assests/images/macaronss.jpg" height="128" width="128">
             </section>
             <section>
-
+                <p> Nossos maravilhoso macarons são reconhecidos em qualquer lugar. Um classico da patisserie, ainda
+                    mais incrivel,
+                    com uma massa super leve e crocante por fora, com um rceheio super aromatico e com pedacinhos de
+                    frutas e chocolates.
+                </p>
+            </section>
+            
+        </article>
+        <article id="a01"><!-- Um iten-->
+            <section>
+                <img src="assests/images/chouxcream.jpg" height="128" width="160">
+            </section>
+            <section>
+                <p id="p01">Nosso chouxcream é mais um clássico da confeitaria, delicioso, docinho, bem harmonizado,
+                    crocante por fora e cremoso por dentro. Nossa "pate a choux" é incrivelmete leve e crocante por
+                    fora,
+                    com uma casquinha açucarada e um interior bem aerado, nosso recheio de crème patisserie pode ser
+                    harmonizado
+                    com frutas vermelhas se for de sua preferencia. </p>
             </section>
         </article>
-        <article><!-- Um iten-->
-            <section>
-
-            </section>
-            <section>
-
-            </section>
-        </article>
-        <article><!-- Um iten-->
-            <section>
-
-            </section>
-            <section>
-
-            </section>
-        </article>
-    </main>
-
-    <main>
-        <article><!-- Um iten-->
-            <section>
-
-            </section>
-            <section>
-
-            </section>
-        </article>
-        <article><!-- Um iten-->
-            <section>
-
-            </section>
-            <section>
-
-            </section>
-        </article>
-        <article><!-- Um iten-->
+        
+        <article id="a01"><!-- Um iten-->
             <section>
 
             </section>
@@ -81,7 +67,7 @@
     </main>
 
     <main>
-        <article><!-- Um iten-->
+        <article id="a01"><!-- Um iten-->
             <section>
 
             </section>
@@ -89,7 +75,7 @@
 
             </section>
         </article>
-        <article><!-- Um iten-->
+        <article id="a01"><!-- Um iten-->
             <section>
 
             </section>
@@ -97,7 +83,7 @@
 
             </section>
         </article>
-        <article><!-- Um iten-->
+        <article id="a01"><!-- Um iten-->
             <section>
 
             </section>
@@ -108,7 +94,7 @@
     </main>
 
     <main>
-        <article><!-- Um iten-->
+        <article id="a01"><!-- Um iten-->
             <section>
 
             </section>
@@ -116,7 +102,7 @@
 
             </section>
         </article>
-        <article><!-- Um iten-->
+        <article id="a01"><!-- Um iten-->
             <section>
 
             </section>
@@ -124,7 +110,34 @@
 
             </section>
         </article>
-        <article><!-- Um iten-->
+        <article id="a01"><!-- Um iten-->
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+        </article>
+    </main>
+
+    <main>
+        <article id="a01"><!-- Um iten-->
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+        </article>
+        <article id="a01"><!-- Um iten-->
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+        </article>
+        <article id="a01"><!-- Um iten-->
             <section>
 
             </section>
