comentários do feedback.html

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -9,25 +9,29 @@
 
 <body>
     <form>
-        <article>
-            <h1 id="h1">Deixe um comentário</h1>
-        
+<!-- título ´principal da página-->
+        <h1 id="h1">Deixe um comentário</h1>
+        <!-- primeira caixa de texto, nome completa da pessoa-->
+
         <div class="caixataxt1">
-        <label id="label">Nome:</label>
-        <input type="" placeholder="Digite seu nome" id="caixatext1">
+            <label id="label">Nome:</label>
+            <input type="" placeholder="Digite seu nome" id="caixatext1">
         </div>
+        <!-- segunda caixa de texto, informar o e-mail -->
         <div class="caixataxt1">
-        <label id="label">E-mail:</label>
-        <input type="" placeholder="Digite seu e-mail"id="caixatext1">
+            <label id="label">E-mail:</label>
+            <input type="" placeholder="Digite seu e-mail" id="caixatext1">
         </div>
+        <!-- terceira caixa de texto, comentário opcional-->
         <div class="caixataxt1">
-        <label id="label">Comentário:</label>
-        <input placeholder="Digite sua mensagem" id="mensag">
+            <label id="label">Comentário:</label>
+            <input placeholder="Digite sua mensagem" id="mensag">
         </div>
-        <div >
-        <input type="submit" id="enviar">
+        <!-- botão de enviar -->
+        <div>
+            <input type="submit" id="enviar">
         </div>
-        </article>
+
 
     </form>
 
