--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="assests/css/menu.css" rel="stylesheet">
+    <link href="assests/css/menu.css" rel="stylesheet" type="text/css">
     <title>doce</title>
 </head>
 
@@ -13,6 +13,7 @@
 <h1><img src="assests/images/doce.jpg" width="9%" height="9%" id="img"></h1>
         </section>
         </article>
+        <p id="p1">dsgdgsgdgsd</p>
         <article><!-- Um iten-->
             <section>
 
