branch do fábio

--- a/menu.html
+++ b/menu.html
@@ -58,7 +58,7 @@
         
         <article id="a01"><!-- Um iten-->
             <section>
-
+                <img src="assests/images/bombompistache.jpg" height="128" width="160">
             </section>
             <section>
 
