fix: adição do required

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -15,17 +15,17 @@
 
         <div class="caixataxt1">
             <label id="label">Nome:</label>
-            <input type="" placeholder="Digite seu nome" id="caixatext1">
+            <input type="" placeholder="Digite seu nome" id="caixatext1" required>
         </div>
         <!-- segunda caixa de texto, informar o e-mail -->
         <div class="caixataxt1">
             <label id="label">E-mail:</label>
-            <input type="" placeholder="Digite seu e-mail" id="caixatext1">
+            <input type="email" placeholder="Digite seu e-mail" id="caixatext1" required>
         </div>
         <!-- terceira caixa de texto, comentário opcional-->
         <div class="caixataxt1">
             <label id="label">Comentário:</label>
-            <input placeholder="Digite sua mensagem" id="mensag">
+            <input placeholder="Digite sua mensagem" id="mensag" required>
         </div>
         <!-- botão de enviar -->
         <div>
