--- a/pages/contato.html
+++ b/pages/contato.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../assests/css/contato.css">
-    <title>Document</title>
+    
+    <title>GattOmega</title>
 </head>
 
 <body>
