arrumado menu.html

--- a/menu.html
+++ b/menu.html
@@ -7,10 +7,8 @@
     <title>Patiserie di Paris</title>
 </head>
 
-<body>
-    <header><!-- Aqui está disposto o menu de navegação entre as páginas do site -->
+<body><!-- Aqui está disposto o menu de navegação entre as páginas do site -->
         <iframe src="layouts/header.html" position="fixed" scrolling="no" width="100%"></iframe>
-    </header>
     <article id="art1"><!-- Aqui ficará a promoção principal (petit gateau) -->
         <section id="promo1">
             <img src="assests/images/petitgateaupp.jpg" height="128" width="82">
@@ -239,9 +237,6 @@
             </div>
         </article>
     </main>
-    <footer>
-
-    </footer>
 </body>
 
 </html>
