fix: adição do header

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -7,7 +7,7 @@
     
     <title>GattOmega</title>
 </head>
-
+<iframe src="../layouts/header.html" width="100%" frameborber="no"></iframe>
 <body>
     
     <form>
