fix: action sucess

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -10,7 +10,7 @@
 <iframe src="../layouts/header.html" width="100%" frameborber="no"></iframe>
 <body>
     
-    <form>
+    <form action="./sucess.html">
 <!-- título ´principal da página-->
         <h1 id="h1">Deixe um comentário!</h1>
         <!-- primeira caixa de texto, nome completa da pessoa-->
