--- a/pages/sucess.html
+++ b/pages/sucess.html
@@ -19,6 +19,6 @@
         <input type="submit" value="Voltar ao Inicio" id="voltar">
     </form>
     <!--linkando footer-->
-    <iframe src="../layouts/footer.html" width="100%" frameborder="no"></iframe>
+    <iframe src="../layouts/footer.html" width="100%" frameborder="no" id="iframef"></iframe>
 </body>
 </html>
