branch do fábio

--- a/menu.html
+++ b/menu.html
@@ -52,7 +52,7 @@
                     fora,
                     com uma casquinha açucarada e um interior bem aerado, nosso recheio de crème patisserie pode ser
                     harmonizado
-                    com frutas vermelhas se for de sua preferencia. </p>
+                    com frutas vermelhas se for de sua preferencia! </p>
             </section>
         </article>
         
@@ -61,7 +61,7 @@
                 <img src="assests/images/bombompistache.jpg" height="128" width="160">
             </section>
             <section>
-
+                
             </section>
         </article>
     </main>
