correção dos erros no menu.css novamente

--- a/menu.html
+++ b/menu.html
@@ -152,12 +152,12 @@
             <div class="divisa123">
                 <section id="se123">
                     <div class="ltdl">
-                        <h1>Marrie</h1>
-                        <h6>em : 05/03/2024</h6>
+                        <h1 id="titles1a6">Marrie</h1>
+                        <h6 id="titles1a6">em : 05/03/2024</h6>
                     </div>
                     <div class="ltdl">
                         <img src="assests/images/gato1.jfif" width="64px" height="64px" class="imagens123456">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem officiis possimus a, libero eaque
+                        <p id="text1a6">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem officiis possimus a, libero eaque
                             doloremque porro, fugit minus odio dicta fuga molestiae, repudiandae aliquid voluptates. Quod
                             debitis alias nihil ab..</p>
                     </div>
@@ -165,12 +165,12 @@
     
                 <section id="se123">
                     <div class="ltdl">
-                        <h1>Cheshire</h1>
-                        <h6>em : 05/03/2023</h6>
+                        <h1 id="titles1a6">Cheshire</h1>
+                        <h6 id="titles1a6">em : 05/03/2023</h6>
                     </div>
                     <div class="ltdl">
                         <img src="assests/images/gato2.jpg" width="64px" height="64px" class="imagens123456">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In est placeat sunt iusto quod, animi
+                        <p id="text1a6">Lorem ipsum dolor sit amet consectetur adipisicing elit. In est placeat sunt iusto quod, animi
                             error
                             tenetur doloremque asperiores porro nam harum necessitatibus fugit beatae quasi obcaecati,
                             maiores,
@@ -180,12 +180,12 @@
     
                 <section id="se123">
                     <div class="ltdl">
-                        <h1>Cheshire</h1>
-                        <h6>em : 05/03/2023</h6>
+                        <h1 id="titles1a6">Cheshire</h1>
+                        <h6 id="titles1a6">em : 05/03/2023</h6>
                     </div>
                     <div class="ltdl">
                         <img src="assests/images/gato2.jpg" width="64px" height="64px" class="imagens123456">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In est placeat sunt iusto quod, animi
+                        <p id="text1a6">Lorem ipsum dolor sit amet consectetur adipisicing elit. In est placeat sunt iusto quod, animi
                             error
                             tenetur doloremque asperiores porro nam harum necessitatibus fugit beatae quasi obcaecati,
                             maiores,
@@ -195,12 +195,12 @@
             <div class="divisa123">
                 <section id="se456">
                     <div class="ltdl">
-                        <h1>Cheshire</h1>
-                        <h6>em : 05/03/2023</h6>
+                        <h1 id="titles1a6">Cheshire</h1>
+                        <h6 id="titles1a6">em : 05/03/2023</h6>
                     </div>
                     <div class="ltdl">
                         <img src="assests/images/gato2.jpg" width="64px" height="64px" class="imagens123456">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In est placeat sunt iusto quod, animi
+                        <p id="text1a6">Lorem ipsum dolor sit amet consectetur adipisicing elit. In est placeat sunt iusto quod, animi
                             error
                             tenetur doloremque asperiores porro nam harum necessitatibus fugit beatae quasi obcaecati,
                             maiores,
@@ -208,12 +208,12 @@
                 </section>
                 <section id="se456">
                     <div class="ltdl">
-                        <h1>Cheshire</h1>
-                        <h6>em : 05/03/2023</h6>
+                        <h1 id="titles1a6">Cheshire</h1>
+                        <h6 id="titles1a6">em : 05/03/2023</h6>
                     </div>
                     <div class="ltdl">
                         <img src="assests/images/gato2.jpg" width="64px" height="64px" class="imagens123456">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In est placeat sunt iusto quod, animi
+                        <p id="text1a6">Lorem ipsum dolor sit amet consectetur adipisicing elit. In est placeat sunt iusto quod, animi
                             error
                             tenetur doloremque asperiores porro nam harum necessitatibus fugit beatae quasi obcaecati,
                             maiores,
@@ -221,12 +221,12 @@
                 </section>
                 <section id="se456">
                     <div class="ltdl">
-                        <h1>Cheshire</h1>
-                        <h6>em : 05/03/2023</h6>
+                        <h1 id="titles1a6">Cheshire</h1>
+                        <h6 id="titles1a6">em : 05/03/2023</h6>
                     </div>
                     <div class="ltdl">
                         <img src="assests/images/gato2.jpg" width="64px" height="64px" class="imagens123456">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In est placeat sunt iusto quod, animi
+                        <p id="text1a6">Lorem ipsum dolor sit amet consectetur adipisicing elit. In est placeat sunt iusto quod, animi
                             error
                             tenetur doloremque asperiores porro nam harum necessitatibus fugit beatae quasi obcaecati,
                             maiores,
