--- a/menu.html
+++ b/menu.html
@@ -139,10 +139,11 @@
         </article>
         <article id="a01"><!-- Um iten-->
             <section>
-
+                <img src="assests/images/maxresdefault.jpg" height="128" width="160">
             </section>
             <section>
-
+<p> Nosso risadeiro é um exelente brigadeiro com uma pitada de alegria. Caso você esteja em um dia ruim esse doce é exatamente o 
+    que precisa.</p>
             </section>
         </article>
     </main>
