--- a/menu.html
+++ b/menu.html
@@ -130,10 +130,10 @@
             </section>
         </article>
         <article id="a01"><!-- Um iten-->
-            <section>
-
+            <img src="assests/images/Brownie-de-Nescau-TC.webp" height="128" width="160">
             </section>
             <section>
+                <p>Nosso brownie é crocante, macio e feito com muito amor assim que é feito nosso brownie, o maior e melhor da região.</p>
 
             </section>
         </article>
