--- a/menu.html
+++ b/menu.html
@@ -61,7 +61,10 @@
                 <img src="assests/images/bombompistache.jpg" height="128" width="160">
             </section>
             <section>
-                
+                <p> Nosso bomobom de pistache é obsceno. Ele tem uma camada fina e brilhante de chocolate, doce e harmonioza.
+                    Por dentro, um creme a base de pistache, que harmoniza perfeitamente com o chocolate, nosso creme de pistache é feito comk leite dos alpes
+                    e pistachio e italiano. Simplismente perfeito.
+                </p>
             </section>
         </article>
     </main>
@@ -69,7 +72,7 @@
     <main>
         <article id="a01"><!-- Um iten-->
             <section>
-
+                <img src="assests/images/boloredvelvet.jpg" height="128" width="160">
             </section>
             <section>
 
@@ -77,7 +80,7 @@
         </article>
         <article id="a01"><!-- Um iten-->
             <section>
-<a></a>
+                <img src="assests/images/brownie.jfif" height="128" width="160">
             </section>
             <section>
 
@@ -85,34 +88,7 @@
         </article>
         <article id="a01"><!-- Um iten-->
             <section>
-
-            </section>
-            <section>
-
-            </section>
-        </article>
-    </main>
-
-    <main>
-        <article id="a01"><!-- Um iten-->
-            <section>
-
-            </section>
-            <section>
-
-            </section>
-        </article>
-        <article id="a01"><!-- Um iten-->
-            <section>
-
-            </section>
-            <section>
-
-            </section>
-        </article>
-        <article id="a01"><!-- Um iten-->
-            <section>
-
+                <img src="assests/images/floresta negra.jfif" height="128" width="160">
             </section>
             <section>
 
@@ -123,7 +99,7 @@
     <main>
         <article id="a01"><!-- Um iten-->
             <section>
-
+                <img src="assests/images/chocolat.jfif" height="128" width="160">
             </section>
             <section>
 
@@ -131,7 +107,7 @@
         </article>
         <article id="a01"><!-- Um iten-->
             <section>
-
+                <img src="assests/images/nuage.jfif" height="128" width="160">
             </section>
             <section>
 
@@ -139,7 +115,34 @@
         </article>
         <article id="a01"><!-- Um iten-->
             <section>
+                <img src="assests/images/tarte.jfif" height="128" width="160">
+            </section>
+            <section>
 
+            </section>
+        </article>
+    </main>
+
+    <main>
+        <article id="a01"><!-- Um iten-->
+            <section>
+                <img src="assests/images/bombompistache.jpg" height="128" width="160">
+            </section>
+            <section>
+
+            </section>
+        </article>
+        <article id="a01"><!-- Um iten-->
+            <section>
+                <img src="assests/images/cookie.jpg" height="128" width="160">
+            </section>
+            <section>
+
+            </section>
+        </article>
+        <article id="a01"><!-- Um iten-->
+            <section>
+                <img src="assests/images/maxresdefault.jpg" width="160" height="128">
             </section>
             <section>
 
@@ -236,7 +239,7 @@
         </article>
     </main>
     <footer>
-
+        <iframe src="layouts/footer.html" width="100%"></iframe>
     </footer>
 </body>
 
