fix: adição do icon

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../assests/css/contato.css">
+    <link rel="icon" type="imagem/x-icon" href="../assests/images/logo.png">
     
     <title>GattOmega</title>
 </head>
