adição da descrição do brigadeiro

--- a/menu.html
+++ b/menu.html
@@ -148,7 +148,7 @@
                 <img src="assests/images/maxresdefault.jpg" width="160" height="128">
             </section>
             <section>
-
+                <p>Brigadeiro artesanal feito no dia, um dos melhores da região e o mais simples doce que vendemos, ele contem chocolate gourmet oque refina ainda mais o paladar de quem prova, e alguns deles vem com um "brigatinho" de brinde!</p>
             </section>
         </article>
     </main>
