--- a/menu.html
+++ b/menu.html
@@ -75,7 +75,9 @@
                 <img src="assests/images/boloredvelvet.jpg" height="128" width="160">
             </section>
             <section>
-
+                Nosso bolo red, tem uma massa a base de pão de ló super macia e aerada, nossas geleias e recheios são artesanais 
+                e com as frutas vermelhas cultivadas no chile e no peru. A combinação do creme montado com creme de leite fresco da 
+                italia e queijo mascarpone, traz uma complexidade de sabores incrivel ao bolo, harmonizando com o doce do bolo. É simplismente maravilhoso.
             </section>
         </article>
         <article id="a01"><!-- Um iten-->
@@ -152,8 +154,8 @@
             </section>
         </article>
     </main>
-
-    <main>
+<hr>
+    <main id="mm">
         <article>
             <div class="divisa123">
                 <section id="se123">
