--- a/menu.html
+++ b/menu.html
@@ -110,18 +110,20 @@
         </article>
         <article id="a01"><!-- Um iten-->
             <section>
+                <h2>Bolo de chocolate fofo</h2>
                 <img src="assests/images/nuage.jfif" height="128" width="160">
             </section>
             <section>
-
+                <p>Nosso simples bolo de chocolate tem uma pequena cobertura de leite amada pelos gatinho! além de ser muito macio e com um cacau muito refinado oque deixa o bolo muito leve e de degustação incrivel!</p>
             </section>
         </article>
         <article id="a01"><!-- Um iten-->
             <section>
+                <h2>Tortinha de Morango</h2>
                 <img src="assests/images/tarte.jfif" height="128" width="160">
             </section>
             <section>
-
+                <p>Nossa tortinha de morango é amada tanto por gatinhos quanto por humano! ela tem uma massa suave e um recheio simples com uma pequena cobertura de geleia de morango com alguns pedaços de morango muito deliciosos!!!</p>
             </section>
         </article>
     </main>
