arrumado footer.css contato.css e contato.html

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -37,7 +37,7 @@
 
 
     </form>
-<iframe src="../layouts/footer.html"  width="100%" frameborber="no"></iframe>
+<iframe src="../layouts/footer.html"  width="100%" frameborber="no" scrolling="no" id="ifooter"></iframe>
 </body>
 
 </html>
