--- a/menu.html
+++ b/menu.html
@@ -226,13 +226,8 @@
                         <h6>em : 05/03/2023</h6>
                     </div>
                     <div class="ltdl">
-                        <img src="assests/images/gato2.jpg" width="64px" height="64px" class="imagens123456">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In est placeat sunt iusto quod,
-                            animi
-                            error
-                            tenetur doloremque asperiores porro nam harum necessitatibus fugit beatae quasi obcaecati,
-                            maiores,
-                            unde quisquam.</p>
+                        <img src="assests/images/Luciferdisney.webp" width="64px" height="64px" class="imagens123456">
+                        <p>É... até que não estava tão ruim quanto as outras confeitarias que a Cinderella me levava.</p>
                 </section>
                 <section id="se456">
                     <div class="ltdl">
