--- a/menu.html
+++ b/menu.html
@@ -145,7 +145,7 @@
                 <img src="assests/images/brownie.jfif" height="128" width="160">
             </section>
             <section>
-                <p>Nosso brownie é crocante, macio e feito com muito amor assim que é feito nosso brownie, o maior e melhor da região.</p>
+                <p>Nosso brownie é crocante, macio e feito com muito amor esses são os ingredientes do nosso brownie, o maior e melhor da região.</p>
             </section>
         </article>
         <article id="a01"><!-- Um iten-->
