fix: texto floresta negra

--- a/menu.html
+++ b/menu.html
@@ -100,11 +100,9 @@
             <section>
                 <img src="assests/images/floresta negra.jfif" height="128" width="160">
             </section>
-           <p>Além do destilado de cereja, o sabor tradicional de floresta negra é composto por três ingredientes
-            principais: chocolate, chantilly, e, claro, cereja. São eles os responsáveis por formarem essa combinação
-            incrível que explode na boca, capaz de despertar as melhores lembranças e sentimentos dentro de nós.</p>
+           
             <section>
-
+                <p>Além do destilado de cereja, o sabor tradicional de floresta negra é composto por três ingredientes principais: chocolate, chantilly, e, claro, cereja. São eles os responsáveis por formarem essa combinação incrível que explode na boca, capaz de despertar as melhores lembranças e sentimentos dentro de nós.</p>
             </section>
         </article>
     </main>
