--- a/menu.html
+++ b/menu.html
@@ -98,6 +98,7 @@
         </article>
         <article id="a01"><!-- Um iten-->
             <section>
+                <h2>Floresta Negra</h2>
                 <img src="assests/images/floresta negra.jfif" height="128" width="160">
             </section>
            
@@ -181,11 +182,7 @@
                     </div>
                     <div class="ltdl">
                         <img src="assests/images/gato1.jfif" width="64px" height="64px" class="imagens123456">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem officiis possimus a, libero
-                            eaque
-                            doloremque porro, fugit minus odio dicta fuga molestiae, repudiandae aliquid voluptates.
-                            Quod
-                            debitis alias nihil ab..</p>
+                        <p>Esta doceria é maraviaeux, merci por todos os confeiteros dessa doceria que fizerramm meu estômago felixx.</p>
                     </div>
                 </section>
 
