alteração textos gato e comida

--- a/menu.html
+++ b/menu.html
@@ -109,11 +109,14 @@
     <main>
         <article id="a01"><!-- Um iten-->
             <section>
+                <h2>Torta de chocolate</h2>
                 <img src="assests/images/chocolat.jfif" height="128" width="160">
             </section>
             <section>
-                <h1>Mil Folhas</h1>
-                <p></p>
+                <p>Torta de chocolate, também conhecida como torta de creme de chocolate, é uma sobremesa que consiste
+                    em chocolate amargo, creme e ovos, batidos juntos, despejados em uma casca de massa crocante e
+                    adoçada e assados ​​até ficarem firmes. É considerado uma forma de pastel de nata porque inclui um
+                    recheio à base de ovo.</p>
             </section>
         </article>
         <article id="a01"><!-- Um iten-->
@@ -142,7 +145,7 @@
     <main>
         <article id="a01"><!-- Um iten-->
             <section>
-                <h1>Mil Folhas</h1>
+                <h2>Mil Folhas</h2>
                 <img src="assests/images/milfolhas.jpg" height="128" width="160">
                 <p>Em Portugal é um doce muito apreciado, normalmente individual, coberto com uma camada de açúcar com
                     pinceladas de chocolate, e o recheio do mil-folhas é constituído por um creme pasteleiro, ao qual se
@@ -200,12 +203,7 @@
                     </div>
                     <div class="ltdl">
                         <img src="assests/images/gato2.jpg" width="64px" height="64px" class="imagens123456">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In est placeat sunt iusto quod,
-                            animi
-                            error
-                            tenetur doloremque asperiores porro nam harum necessitatibus fugit beatae quasi obcaecati,
-                            maiores,
-                            unde quisquam.</p>
+                        <p>Uau, que doces maravilhooosos hahahaha, esse risaaadero é tão cacauzudo que dá vontade de pegar touuudos.</p>
                     </div>
                 </section>
 
