--- a/menu.html
+++ b/menu.html
@@ -296,7 +296,7 @@
         </article>
     </main>
     <footer>
-        <iframe src="layouts/footer.html" width="100%"></iframe>
+        <iframe src="layouts/footer.html" width="100%" frameborder="no"></iframe>
     </footer>
 </body>
 
