--- a/menu.html
+++ b/menu.html
@@ -212,7 +212,7 @@
                         <h6>em : 05/03/2023</h6>
                     </div>
                     <div class="ltdl">
-                        <img src="assests/images/gato2.jpg" width="64px" height="64px" class="imagens123456">
+                        <img src="assests/images/Luciferdisney.webp" width="64px" height="64px" class="imagens123456">
                         <p>É... até que não estava tão ruim quanto as outras confeitarias que a Cinderella me levava.</p>
                 </section>
                 <section id="se456">
