--- a/menu.html
+++ b/menu.html
@@ -261,12 +261,7 @@
                     </div>
                     <div class="ltdl">
                         <img src="assests/images/gato2.jpg" width="64px" height="64px" class="imagens123456">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In est placeat sunt iusto quod,
-                            animi
-                            error
-                            tenetur doloremque asperiores porro nam harum necessitatibus fugit beatae quasi obcaecati,
-                            maiores,
-                            unde quisquam.</p>
+                        <p>Eu de fato amei esse risadeiro, hehehe</p>
                 </section>
                 <section id="se456">
                     <div class="ltdl">
@@ -285,12 +280,7 @@
                     </div>
                     <div class="ltdl">
                         <img src="assests/images/gato2.jpg" width="64px" height="64px" class="imagens123456">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In est placeat sunt iusto quod,
-                            animi
-                            error
-                            tenetur doloremque asperiores porro nam harum necessitatibus fugit beatae quasi obcaecati,
-                            maiores,
-                            unde quisquam.</p>
+                        <p>Muito doido essa confeitaria, espero voltar mais vezes, recomendarei essa patisserie para o chapeleiro e pro coelho.</p>
                 </section>
             </div>
         </article>
